--- a/Source/build.gradle
+++ b/Source/build.gradle
@@ -12,4 +12,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.projectlombok:lombok:1.16.20'
+    compile 'com.opencsv:opencsv:4.1'
 }
